test/expected/declare_co_exclam_k_b.out
declare ! as const operator(S) returning bool
                            ^
29: error: member operator "!" must have exactly 0 parameters
